# space-syntax-analyzer

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README_station_analysis.md  __init__.py  check_dependencies.py  debug_test.py  diagnose_environment.py  dumprepo.json  fix_lint_errors.py  fix_test_errors.py  main.py  pyproject.toml  quick_fix.py  requirements.txt  run_station_analysis.sh  sample_config.json  setup.py  station_config.json
config/: default_config.json
core/: __init__.py  analyzer.py  metrics.py  network.py  visualization.py
demo_output/: results_basic_渋谷__東京.json
docs/: Makefile  requirements-docs.txt  setup.md  spec.md
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  space_syntax_analyzer.core.rst  space_syntax_analyzer.data.rst  space_syntax_analyzer.rst  space_syntax_analyzer.utils.rst
examples/: basic_usage.py  demo.py  enhanced_demo.py  station_analysis_demo.py
scripts/: test_japanese_font.py
space_syntax_analyzer/: __init__.py
space_syntax_analyzer/core/: __init__.py  analyzer.py  axial.py  enhanced_analyzer.py  enhanced_visualization.py  metrics.py  network.py  visibility.py  visualization.py
space_syntax_analyzer/docs/: spec.md
space_syntax_analyzer/exceptions/: errors.py
space_syntax_analyzer/utils/: __init__.py  geo_utils.py  helpers.py
src/: __init__.py  config_manager.py  graph_builder.py  osm_data_loader.py  report_generator.py  space_syntax_analyzer.py  utils.py  visualization.py
tests/: __init__.py  test_analyzer.py  test_analyzer_lightweight.py  test_metrics.py  test_utils.py
utils/: __init__.py  helpers.py
